# ai-trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt
instruction-tuning/: gold_answers.md
