[tool.poetry]
name = "ai-trainer"
version = "0.1.0"
description = "A Python training library."
authors = ["Diego Verak <diegoverak@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"